	Fixed bug where pasting from Excel 2011 on Mac didn't produce a proper table when using the paste plugin.
	Fixed bug where drag/dropping inside a table wouldn't properly end the table cell selection.
	Fixed bug where drag/dropping images within tables on Safari on Mac wouldn't work properly.
	Fixed bug where editors couldn't be re-initialized if they where externally destroyed.
Version 4.0.22 (2014-04-16)
	Added lastLevel to BeforeAddUndo level event so it's easier to block undo level creation based.
	Fixed so multiple list elements can be indented properly. Patch contributed by Dan Villiom Podlaski Christiansen.
	Fixed bug where the selection would be at the wrong location sometimes for inline editor instances.
	Fixed bug where drag/dropping content into an inline editor would fail on WebKit/Blink.
	Fixed bug where table grid wouldn't work properly when the UI was rendered in for RTL mode.
	Fixed bug where range normalization wouldn't handle mixed contentEditable nodes properly.
	Fixed so the media plugin doesn't override the existing element rules you now need to manually whitelist non standard attributes.
	Fixed so old language packs get properly loaded when the new longer language code format is used.
	Fixed so all track changes junk such as comments, deletes etc gets removed when pasting from Word.
	Fixed so non image data urls is blocked by default since they might contain scripts.
	Fixed so it's possible to import styles from the current page stylesheets into an inline editor by using the importcss_file_filter.
	Fixed bug where the spellchecker plugin wouldn't add undo levels for each suggestion replacement.
	Reworked the default spellchecker RPC API to match the new PHP Spellchecker package. Fallback documented in the TinyMCE docs.
Version 4.0.21 (2014-04-01)
	Added new getCssText method to formatter to get the preview css text value for a format to be used in UI.
	Added new table_grid option that allows you to disable the table grid and use a dialog.